Update About page format

--- a/savis4/Savis4/src/assets/i18n/en.json
+++ b/savis4/Savis4/src/assets/i18n/en.json
@@ -6,6 +6,7 @@
     "spring2019": "Spring 2019",
     "spring2020": "Spring 2020",
     "spring2024": "Spring 2024",
+    "spring2025": "Spring 2025",
     "contact": "Contact",
     "//one_mean_component": "These are the translations for the OneMean component",
     "one_mean_hypothesis_testing": "One Mean Hypothesis Testing",
