Added language switch to navbar, edited some spanish translations

--- a/savis4/Savis4/src/assets/i18n/en.json
+++ b/savis4/Savis4/src/assets/i18n/en.json
@@ -109,7 +109,7 @@
     "tm_mean2": "Mean 2 (Group 2):",
     "tm_difference1": "Difference of Means (Mean 1 - Mean 2):",
     "tm_run_sim_title": "2. Run Simulation",
-    "tm_num_sim": "# of Simulation",
+    "tm_num_sim": "# of Simulations",
     "tm_run_sim": "Run Simulation",
     "tm_mean3": "Mean of Randomized Sample to Group 1:",
     "tm_mean4": "Mean of Randomized Sample to Group 2:",
@@ -234,7 +234,7 @@
     "tp_B_Successes": "Proportion of Successes in Group B",
     "tp_diff_1": "Difference of Proportions",
     "tp_run_sim_title": "2. Run Simulation",
-    "tp_num_sim": "# of Simulation",
+    "tp_num_sim": "# of Simulations",
     "tp_run_sim": "Run Simulation",
     "tp_group_A_random_successes": "Proportion of Successes Randomized to Group A",
     "tp_group_B_random_successes": "Proportion of Successes Randomized to Group B",
