--- a/savis4/Savis4/src/assets/i18n/es.json
+++ b/savis4/Savis4/src/assets/i18n/es.json
@@ -8,8 +8,8 @@
     "spring2024": "Primavera 2024",
     "contact": "Contacto",
     "//one_mean_component": "These are the translations for the OneMean component",
-    "one_mean_hypothesis_testing": "Prueba de significancia de una media",
-    "enter_data": "Introducir datos",
+    "one_mean_hypothesis_testing": "Prueba de Significancia de Una Media",
+    "enter_data": "Introducir Datos",
     "section1_placeholder": "Ingrese los datos en formato de columna o cargue un archivo CSV",
     "load_data": "Cargar datos",
     "reset": "Reiniciar",
@@ -32,7 +32,7 @@
     "mean_of_sample": "Media de las medias:",
     "original_dataset": "Conjunto de datos originales",
     "//one_proportion": "These are the translations for the One Proportion component",
-    "op_title": "Prueba de significancia de una distribución binomial",
+    "op_title": "Prueba de Significancia de Una Distribución Binomial",
     "op_probability": "Probabilidad de éxitos p: ",
     "op_tosses": "Número de ensayos: ",
     "op_reset": "Reinicio",
@@ -54,8 +54,8 @@
     "op_bar_heads2": "ensayos",
     "op_bar_num_samples": "Número de éxitos",
     "//one_proportion_confidence_interval": "These are the translations for the One Proportion Confidence Interval component",
-    "opc_title": "Intervalo de confianza de una proporción",
-    "opc_data": "Introducir datos",
+    "opc_title": "Intervalo de Confianza de Una Proporción",
+    "opc_data": "Introducir Datos",
     "opc_success": "Éxitos",
     "opc_failure": "Fracasos",
     "opc_load": "Cargar datos",
@@ -68,7 +68,7 @@
     "opc_propSims": "Proporción de éxitos en la muestra más reciente (p̂): ",
     "opc_Recent": "Muestra más reciente",
     "opc_percentage": "Porcentaje",
-    "opc_SampleProp": "Distribución muestral de proporciones",
+    "opc_SampleProp": "Distribución Muestral de Proporciones",
     "opc_build": "Construir",
     "opc_mean": "Media de proporciones muestrales:",
     "opc_stddev": "Desviación Estándar: ",
@@ -93,7 +93,7 @@
     "opc_prop_select": "Proporciones seleccionadas: ",
     "opc_prop_noselect": "Proporciones no seleccionadas: ",
     "//Two_means_hypothesis": "These are the translations for the Two means hypothesis component",
-    "two_mean_title": "Prueba de significancia dos medias",
+    "two_mean_title": "Prueba de Significancia de Dos Medias",
     "tm_enter_data": "1. Ingresas Datos",
     "tm_select_data": "Ejemplos",
     "tm_sample1": "Ejemplo 1",
@@ -133,16 +133,16 @@
     "tm_differences": "Diferencias",
     "tm_diff_mean": "Diferencia de Medias",
     "tm_freq": "Frecuencias",
-    "//omci_One_Mean_Confidence_Interval": "Intervalo de confianza para una media poblacional",
-    "omci_enter_data":" Introducir datos",
+    "//omci_One_Mean_Confidence_Interval": "Intervalo de Confianza Para Una Media Poblacional",
+    "omci_enter_data":" Introducir Datos",
     "omci_Mean": "Media",
     "omci_Standard_Deviation": "Desviación Estándar",
     "omci_Size": "Tamaño",
-    "omci_get_sample": "Obtener la muestra",
+    "omci_get_sample": "Obtener la Muestra",
     "omci_sample_size": "Tamaño de la muestra",
     "omci_num_sim": "Número de simulaciones",
     "omci_run_sim": "Ejecutar simulación",
-    "omci_distribution": "Distribución de medias muestrales",
+    "omci_distribution": "Distribución de Medias Muestrales",
     "omci_means_interval": "Medias a incluir en el intervalo.",
     "omci_min": "Mínimo",
     "omci_max": "Máximo",
@@ -155,7 +155,7 @@
     "omci_means_of_samples": "Media de muestras",
     "omci_std_of_samples": "Desviación estándar de las medias de las muestras",
     "omci_total_samples": "Total número de muestras",
-    "omci_confidence_interval": "Intervalo de confianza del 95%",
+    "omci_confidence_interval": "Intervalo de Confianza del 95%",
     "omci_inputNumbers": "Ingrese números de intervalos: solo se graficarán los primeros Ciencias",
     "omci_calculate_confidence_interval": "Intervalos de construcción",
     "omci_InInterval": "Número de intervalos que contienen la media poblacional",
@@ -174,8 +174,8 @@
     "omci_SampleMean": "Media de las medias muestrales",
     "omci_LowerBound": "Límite inferior",
     "omci_UpperBound": "Límite superior",
-    "omci_sample1": "Ejemplos 1",
-    "omci_sample2": "Ejemplos 2",
+    "omci_sample1": "Ejemplo 1",
+    "omci_sample2": "Ejemplo 2",
     "omci_sample": "Ejemplos",
     "omci_load": "Cargar datos",
     "omci_reset": "Reiniciar",
@@ -218,7 +218,7 @@
     "Tmci_Upper_Bound": "Límite Superior",
     "Tmci_Confidence_level": "Nivel de Confianza",
     "//Two_Proportion_hypothesis": "These are the translations for the Two Proportion hypothesis component",
-    "two_prop_title": "Prueba de significancia de dos proporciones",
+    "two_prop_title": "Prueba de Significancia de Dos Proporciones",
     "tp_enter_data": "1. Ingresas Datos",
     "tp_loadData": "Submir Datos",
     "tp_group_A": "Grupo A",
@@ -327,19 +327,19 @@
     "tpci_values_not_in_interval": "Valores no en intervalo",
     "tpci_alert": "El grupo A y el grupo B deben tener al menos 1 éxito y 1 fracaso.",
     "//Login": "These are the translations for the Login component",
-    "Login": "inicio de sesión",
-    "DontHaveAccount": "no tengo una cuenta",
-    "Signup": "inscríbete",
-    "ContinueAsGuest": "Continuar como invitado",
+    "Login": "Inicio de Sesión",
+    "DontHaveAccount": "¿No tiene una cuenta",
+    "Signup": "Inscríbase",
+    "ContinueAsGuest": "Continuar como Invitado",
     "AlreadyHaveAccount": "Ya tiene cuenta",
     "Username": "Nombre de usuario",
     "UsernameRequired": "Se requiere nombre de usuario",
     "PasswordRequired": "Se requiere contraseña",
     "//Signup": "These are the translations for the Signup component",
-    "FirstName": "Nombre de pila",
+    "FirstName": "Primer Nombre",
     "LastName": "Apellido",
     "Email": "Dirección de correo electrónico",
-    "Password": "contraseña",
+    "Password": "Contraseña",
     "ReEnterPassword": "Escriba la contraseña otra vez",
     "FirstNameRequired": "Se requiere el primer nombre",
     "LastNameRequired": "Se requiere apellido",
@@ -348,16 +348,16 @@
     "PasswordMatch": "Las contraseñas no coinciden",
     "//ForgotPassword": "These are the translations for the ForgotPassword component",
     "Submit": "Enviar",
-    "ForgotPassword": "Contraseña olvidada",
+    "ForgotPassword": "Contraseña Olvidada",
     "BackTo": "de regreso",
     "ValidEmail": "Introduzca una dirección de correo electrónico válida",
     "//BarChart": "These are the translations for the BarChart component",
-    "barChart_title": "Diagrama de barras", 
+    "barChart_title": "Diagrama de Barras", 
     "barChart_inputData": "Ingresar datos",
     "barChart_inputdata": "Datos Ingresados", 
     "barChart_select_sample_data": "Ejemplos",
-    "barChart_sample1": "Ejemplos 1",
-    "barChart_sample2": "Ejemplos 2",
+    "barChart_sample1": "Ejemplo 1",
+    "barChart_sample2": "Ejemplo 2",
     "barChart_loadData": "Cargar datos",
     "barChart_reset": "Reiniciar",
     "barChart_uploadData": "Subir archivo de datos",
@@ -375,10 +375,10 @@
     "barChart_rel_freq": "Frecuencia relativa",
     "//DotPlot": "These are the translations for the DotPlot component",
     "dotPlot_title": "Diagrama de Puntos",
-    "dotPlot_enter_data": "Introducir datos",
+    "dotPlot_enter_data": "Introducir Datos",
     "dotPlot_select_sample_data": "Ejemplos",
-    "dotPlot_sample1": "Ejemplos 1",
-    "dotPlot_sample2": "Ejemplos 2",
+    "dotPlot_sample1": "Ejemplo 1",
+    "dotPlot_sample2": "Ejemplo 2",
     "dotPlot_placeholder": "Teclee aquí los datos siguiendo el formato de los ejemplos o cague un archivo de datos (csv) usando el botón de abajo.",
     "dotPlot_load_data": "Cargar datos",
     "dotPlot_reset": "Reiniciar",
@@ -426,28 +426,28 @@
     "save_saveData": "Guardar datos",
     "save_cancel": "Cancelar",
     "//Load Dialog": "These are the translations for the Load Dialog component",
-    "load_title": "Cargar conjunto de datos",
-    "load_question": "¿De qué archivo quieres cargar datos?",
+    "load_title": "Cargar el grupo de datos",
+    "load_question": "¿De cuál archivo quieres cargar datos?",
     "load_select_file": "Seleccione Archivo",
     "load_prompt": "Edite los datos en el área de texto a continuación",
-    "load_loadFile": "Cargar archivo",
-    "load_editFile": "Editar archivo",
-    "load_deleteFile": "Borrar archivo",
+    "load_loadFile": "Cargar Archivo",
+    "load_editFile": "Editar Archivo",
+    "load_deleteFile": "Borrar Archivo",
     "load_cancel": "Cancelar",
     "//Confirmation Dialog": "These are the translations for the Confirmation Dialog component",
-    "confirmation_question": "Estas seguro?",
+    "confirmation_question": "Está Seguro?",
     "confirmation_yes": "Sí",
     "confirmation_no": "No",
     "//Linear_Regression": "These are the translations for the Linear Regression component",
-    "lr_title": "Línea de regresión e intervalos de confianza",
-    "lr_least_squares": "Área de mínimos cuadrados",
-    "lr_enter_data": "Ingrese puntos de datos (x, y)",
-    "lr_update_chart": "Actualizar gráfico",
-    "lr_choose_file": "Elija el archivo",
+    "lr_title": "Línea de Regresión e Intervalos de Confianza",
+    "lr_least_squares": "Área de Cuadrados Mínimos",
+    "lr_enter_data": "Ingrese Puntos de Datos (x, y)",
+    "lr_update_chart": "Actualizar Gráfica",
+    "lr_choose_file": "Elija el Archivo",
     "lr_placeholder": "e.g.\n1,3\n2,5\n3,7",
-    "lr_scatter_plot": "Gráfico de dispersión",
-    "lr_regression_line": "Línea de regresión",
-    "lr_upper_bound": "Límite superior",
-    "lr_lower_bound": "Límite inferior",
-    "lr_error_bars": "Barras de error"
+    "lr_scatter_plot": "Gráfico de Dispersión",
+    "lr_regression_line": "Línea de Regresión",
+    "lr_upper_bound": "Límite Superior",
+    "lr_lower_bound": "Límite Inferior",
+    "lr_error_bars": "Barras de Error"
 }
