--- a/savis4/Savis4/src/assets/i18n/en.json
+++ b/savis4/Savis4/src/assets/i18n/en.json
@@ -284,6 +284,7 @@
     "nav_download": "Download",
     "nav_user_manual": "User Manual",
     "nav_sign_out": "Sign Out",
+    "nav_sign_in": "Sign In",
     "nav_copyright": "Copyright ©2024 CSUS. All Rights Reserved.",
     "//homepage_component": "These are the translations for the homepage component",
     "homepage_Hypothesis_Testing": "Hypothesis Testing",
