--- a/savis4/Savis4/src/assets/i18n/es.json
+++ b/savis4/Savis4/src/assets/i18n/es.json
@@ -2,10 +2,12 @@
     "TEST": "prueba",
     "//about_component": "These are the translations for the About component",
     "about_project": "Statistical Analysis Visualizations for Introductory Statistics (SAVIS) fue concebido como parte de un proyecto de investigación colaborativo sobre educación estadística entre el Departamento de Matemáticas y Estadística de la Universidad Estatal de California en Sacramento (CSUS) y la Escuela de Matemáticas de la Universidad Autónoma de Yucatán (UADY). SAVIS es una herramienta educativa para ayudar a comprender intuitivamente conceptos de pruebas de hipótesis estadísticas e intervalos de confianza utilizando visualizaciones basadas en técnicas de remuestreo y aleatorización. SAVIS tiene una versión en línea y otra independiente (ambas disponibles gratuitamente) en inglés y español.",
-    "about_created": "SAVIS fue creado en la primavera de 2019 y ampliado en la primavera de 2020 y la primavera de 2024 por los siguientes estudiantes de último año del Departamento de Ciencias de la Computación de CSUS bajo la dirección de Rafael E. Díaz Escamilla, profesor del Departamento de Matemáticas y Estadísticas en CSUS:",
+    "about_created": "SAVIS fue creado en la primavera de 2019 y ampliado en la primavera de 2020, 2024, y 2025 por los siguientes estudiantes de último año del Departamento de Ciencias de la Computación de CSUS bajo la dirección de Rafael E. Díaz Escamilla, profesor del Departamento de Matemáticas y Estadísticas en CSUS. Sus esfuerzos colectivos han mejorado SAVIS, asegurando que éste permanezca como un recurso efectivo para la educación estadística.",
+    "team_members":"Miembros del Equipo",
     "spring2019": "Primavera 2019",
     "spring2020": "Primavera 2020",
     "spring2024": "Primavera 2024",
+    "spring2025": "Primavera 2025",
     "contact": "Contacto",
     "//one_mean_component": "These are the translations for the OneMean component",
     "one_mean_hypothesis_testing": "Prueba de Significancia de Una Media",
