#118 Spanish Translation for Multiple Pages

--- a/savis4/src/assets/i18n/en.json
+++ b/savis4/src/assets/i18n/en.json
@@ -1,6 +1,7 @@
 {
     "TEST": "test",
     "//about_component": "These are the translations for the About component",
+    "about_title":"What is SAVIS?",
     "about_project": "Statistical Analysis Visualization for Introductory Statistics (SAVIS) is an educational tool developed through a research collaboration on statistical education between the Department of Mathematics at Universidad Autónoma de Yucatán (UADY) and California State University, Sacramento (CSUS). SAVIS helps students intuitively understand statistical concepts such as hypothesis testing, confidence intervals, and regression using visualizations based on resampling and randomization techniques. This website provides an online and a stand-alone version (both freely available) in English and Spanish.",
     "about_created": "SAVIS was developed in Spring 2019 and extended in Spring 2020, 2024, and 2025 by teams of graduating seniors from CSUS's Department of Computer Science, under the guidance of Professor Rafael E. Diaz Escamilla from the Department of Mathematics and Statistics at CSUS. Their collective efforts have enhanced SAVIS, ensuring it remains an effective resource for statistical education.",
     "team_members":"Team Members",
@@ -9,6 +10,22 @@
     "spring2024": "Spring 2024",
     "spring2025": "Spring 2025",
     "contact": "Contact",
+    "//download_component": "These are the translations for the Download component",
+    "download_title": "Download SAVIS",
+    "download_bio":"Graph and learn statistical concepts while being offline",
+    "download_windows":"Download for Windows",
+    "download_mac":"Download for Mac",
+    "download_linux":"Download for Linux",
+    "download_mobileTitle":"Download on a Mobile Device",
+    "download_apple":"Download for Apple",
+    "download_android":"Download for Android",
+    "//user_manual_component":"These are the translations for the User Manual component",
+    "uman_title":"How to Use SAVIS",
+    "uman_hyp_testing_title":"Hypothesis Testing",
+    "uman_hyp_testing_subtitle1":"One Proportion",
+    "uman_hyp_testing_par1":"The One Proportion Hypothesis Test tool simulates repeated trials of coin flips to help visualize how sample proportions behave under a given probability. Users can adjust the number of tosses, the number of samples drawn, and the assumed probability of heads. This helps demonstrate the binomial distribution and understand whether observed proportions deviate significantly from what's expected under a given hypothesis.<br><br>To use the tool, begin by setting the probability of heads (p), then choose how many coin tosses will occur in each sample. After entering the number of samples to add, click Draw Samples to simulate. The resulting bar chart shows the number of heads in each trial across all samples. Red bars indicate observed frequencies, blue dots represent the theoretical binomial distribution, and green bars highlight selected intervals for custom analysis.<br><br> The left sidebar provides statistics including total number of samples, average number of heads, and standard deviation. You can also use sliders to focus on a specific interval of head counts—this lets you determine what proportion of your samples fall within a chosen range. This feature is especially useful for hypothesis testing scenarios where you're checking for values that are too extreme under the null hypothesis.",
+    "uman_hyp_testing_subtitle2":"Two Proportions",
+    "uman_hyp_testing_par2":"The Two Proportion Hypothesis Test tool helps you simulate and analyze the difference in success rates between two groups. Users enter the number of successes and failures for Group A and Group B. The tool calculates the proportions and the difference between them.<br><br>Make sure to always click 'Load Data' after entering data. After loading the data, you can simulate random reallocations of success outcomes between the groups to build a sampling distribution. This helps visualize how often differences as extreme as the original would occur by chance.<br><br>The third section displays the sampling distribution of the differences in proportions. You can adjust the minimum and maximum bounds to focus on a specific range and evaluate how frequently extreme values appear. This is useful for understanding statistical significance and evaluating the null hypothesis that the two proportions are equal.",
     "//one_mean_component": "These are the translations for the OneMean component",
     "one_mean_hypothesis_testing": "One Mean Hypothesis Testing",
     "enter_data": "Enter Data",
