--- a/savis4/src/assets/i18n/es.json
+++ b/savis4/src/assets/i18n/es.json
@@ -1,6 +1,7 @@
 {
     "TEST": "prueba",
     "//about_component": "These are the translations for the About component",
+    "about_title":"¿Qué es SAVIS?",
     "about_project": "Statistical Analysis Visualizations for Introductory Statistics (SAVIS) fue concebido como parte de un proyecto de investigación colaborativo sobre educación estadística entre el Departamento de Matemáticas y Estadística de la Universidad Estatal de California en Sacramento (CSUS) y la Escuela de Matemáticas de la Universidad Autónoma de Yucatán (UADY). SAVIS es una herramienta educativa para ayudar a comprender intuitivamente conceptos de pruebas de hipótesis estadísticas e intervalos de confianza utilizando visualizaciones basadas en técnicas de remuestreo y aleatorización. SAVIS tiene una versión en línea y otra independiente (ambas disponibles gratuitamente) en inglés y español.",
     "about_created": "SAVIS fue creado en la primavera de 2019 y ampliado en la primavera de 2020, 2024, y 2025 por los siguientes estudiantes de último año del Departamento de Ciencias de la Computación de CSUS bajo la dirección de Rafael E. Díaz Escamilla, profesor del Departamento de Matemáticas y Estadísticas en CSUS. Sus esfuerzos colectivos han mejorado SAVIS, asegurando que éste permanezca como un recurso efectivo para la educación estadística.",
     "team_members":"Miembros del Equipo",
@@ -9,8 +10,24 @@
     "spring2024": "Primavera 2024",
     "spring2025": "Primavera 2025",
     "contact": "Contacto",
+    "//download_component": "These are the translations for the Download component",
+    "download_title": "Descargar SAVIS",
+    "download_bio":"Utilice gráficos y aprenda conceptos estadísticos sin Internet",
+    "download_windows":"Descargar para Windows",
+    "download_mac":"Descargar para Mac",
+    "download_linux":"Descargar para Linux",
+    "download_mobileTitle":"Descargar en su Móvil",
+    "download_apple":"Descargar para Apple",
+    "download_android":"Descargar para Android",
+    "//user_manual_component":"These are the translations for the User Manual component",
+    "uman_title":"Cómo Utilizar SAVIS",
+    "uman_hyp_testing_title":"Prueba de Hipótesis",
+    "uman_hyp_testing_subtitle1":"De Una Proporción",
+    "uman_hyp_testing_par1":"La herramienta Prueba de Hipótesis de Una Proporción simula repetidos lanzamientos de moneda para visualizar el comportamiento de las proporciones que muestran bajo una probabilidad dada. Los usuarios pueden ajustar el número de lanzamientos, el número de muestras extraídas y la probabilidad supuesta de veces que la moneda cae en cara. Esto ayuda a demostrar la distribución binomial y a comprender si las proporciones observadas se desvían significativamente de lo esperado bajo una hipótesis dada.<br><br> Para usar la herramienta, comience por establecer la probabilidad de veces que la moneda cae en cara (p) y luego elija cuántos lanzamientos de moneda se realizarán en cada muestra. Después de ingresar el número de muestras, haga clic en 'Extraer Muestras' para simular. El gráfico de barras resultante muestra el número de veces que la moneda cae en cara en cada intento en todas las muestras. Las barras rojas indican las frecuencias observadas, los puntos azules representan la distribución binomial teórica y las barras verdes resaltan los intervalos seleccionados para un análisis personalizado.<br><br>La barra lateral izquierda proporciona estadísticas que incluyen el número total de muestras, el número promedio de veces que cae en cara y la desviación estándar. También puede usar los controles deslizantes para enfocarse en un intervalo específico de recuentos de caras; esto le permite determinar qué proporción de sus muestras se encuentra dentro de un rango seleccionado. Esta función es especialmente útil para escenarios de prueba de hipótesis en los que se buscan valores que son demasiado extremos bajo la hipótesis nula.",
+    "uman_hyp_testing_subtitle2":"De Dos Proporciónes",
+    "uman_hyp_testing_par2":"La herramienta Prueba de Hipótesis de Dos Proporciones ayuda a simular y analizar la diferencia en las tasas de éxito entre dos grupos. Los usuarios introducen el número de éxitos y fracasos para el Grupo A y el Grupo B. La herramienta calcula las proporciones y la diferencia entre ellas.<br><br>Asegúrese de hacer clic siempre en 'Cargar Datos' después de introducir los datos. Después de cargar los datos, puede simular reasignaciones aleatorias de los resultados de éxito entre los grupos para crear una distribución muestral. Esto ayuda a visualizar la frecuencia con la que se producirían por casualidad diferencias tan extremas como la original.<br><br>La tercera sección muestra la distribución muestral de las diferencias en las proporciones. Puede ajustar los límites mínimo y máximo para centrarse en un rango específico y evaluar la frecuencia con la que aparecen los valores extremos. Esto es útil para entender la significancia estadística y evaluar la hipótesis nula de que las dos proporciones son iguales.",
     "//one_mean_component": "These are the translations for the OneMean component",
-    "one_mean_hypothesis_testing": "Prueba de Significancia de Una Media",
+    "one_mean_hypothesis_testing": "Prueba de Hipótesis de Una Media",
     "enter_data": "Introducir Datos",
     "section1_placeholder": "Ingrese los datos en formato de columna o cargue un archivo CSV",
     "load_data": "Cargar datos",
@@ -34,7 +51,7 @@
     "mean_of_sample": "Media de las medias:",
     "original_dataset": "Conjunto de datos originales",
     "//one_proportion": "These are the translations for the One Proportion component",
-    "op_title": "Prueba de Significancia de Una Distribución Binomial",
+    "op_title": "Prueba de Hipótesis de Una Distribución Binomial",
     "op_probability": "Probabilidad de éxitos p: ",
     "op_tosses": "Número de ensayos: ",
     "op_reset": "Reinicio",
@@ -95,7 +112,7 @@
     "opc_prop_select": "Proporciones seleccionadas: ",
     "opc_prop_noselect": "Proporciones no seleccionadas: ",
     "//Two_means_hypothesis": "These are the translations for the Two means hypothesis component",
-    "two_mean_title": "Prueba de Significancia de Dos Medias",
+    "two_mean_title": "Prueba de Hipótesis de Dos Medias",
     "tm_enter_data": "1. Ingresas Datos",
     "tm_select_data": "Ejemplos",
     "tm_sample1": "Ejemplo 1",
@@ -220,7 +237,7 @@
     "Tmci_Upper_Bound": "Límite Superior",
     "Tmci_Confidence_level": "Nivel de Confianza",
     "//Two_Proportion_hypothesis": "These are the translations for the Two Proportion hypothesis component",
-    "two_prop_title": "Prueba de Significancia de Dos Proporciones",
+    "two_prop_title": "Prueba de Hipótesis de Dos Proporciones",
     "tp_enter_data": "1. Ingresas Datos",
     "tp_loadData": "Submir Datos",
     "tp_group_A": "Grupo A",
@@ -277,16 +294,17 @@
     "nav_spanish": "Español",
     "nav_home": "Inicio",
     "nav_about": "Acerca de SAVIS",
-    "nav_download": "Bajar Archivo",
+    "nav_download": "Descargar Archivo",
     "nav_user_manual": "Manual del Usuario",
     "nav_sign_out": "Cerrar Sesión",
+    "nav_sign_in": "Identificarse",
     "nav_copyright": "Copyright ©2024 CSUS. Reservados todos los derechos.",
     "//homepage_component": "These are the translations for the homepage component",
-    "homepage_Hypothesis_Testing": "Pruebas de Significancia",
-    "homepage_One_Proportion_Hypothesis_Testing": "Prueba de Significancia de Una Distribución Binomial",
-    "homepage_Two_Proportion_Hypothesis_Testing": "Prueba de Significancia de Dos Proporciones",
-    "homepage_One_Mean_Hypothesis_Testing": "Prueba de Significancia de Una Media",
-    "homepage_Two_Mean_Hypothesis_Testing": "Prueba de Significancia de Dos Medias",
+    "homepage_Hypothesis_Testing": "Pruebas de Hipótesis",
+    "homepage_One_Proportion_Hypothesis_Testing": "Prueba de Hipótesis de Una Distribución Binomial",
+    "homepage_Two_Proportion_Hypothesis_Testing": "Prueba de Hipótesis de Dos Proporciones",
+    "homepage_One_Mean_Hypothesis_Testing": "Prueba de Hipótesis de Una Media",
+    "homepage_Two_Mean_Hypothesis_Testing": "Prueba de Hipótesis de Dos Medias",
     "homepage_Visualization": "Regresión",
     "homepage_Linear_Regression_Visualization": "Visualización de Regresión Lineal",
     "homepage_Correlation_Visualization": "Visualización de Correlación",
