#119 Dark Mode Finishing Touches

--- a/savis4/src/assets/i18n/es.json
+++ b/savis4/src/assets/i18n/es.json
@@ -298,7 +298,7 @@
     "nav_user_manual": "Manual del Usuario",
     "nav_sign_out": "Cerrar Sesión",
     "nav_sign_in": "Identificarse",
-    "nav_copyright": "Copyright ©2024 CSUS. Reservados todos los derechos.",
+    "nav_copyright": "Copyright ©2024 CSUS. Todos los derechos reservados.",
     "//homepage_component": "These are the translations for the homepage component",
     "homepage_Hypothesis_Testing": "Pruebas de Hipótesis",
     "homepage_One_Proportion_Hypothesis_Testing": "Prueba de Hipótesis de Una Distribución Binomial",
