--- a/savis4/src/assets/i18n/en.json
+++ b/savis4/src/assets/i18n/en.json
@@ -274,9 +274,11 @@
     "correlation_format_of_input": "Format of Input: 1, 2, 3, 4, ...",
     "correlation_both_inputs": "Both inputs should be of the same length",
     "correlation_calculate": "Calculate",
+    "correlation_update_chart": "Update Chart",
+    "correlation_choose_file": "Choose File",
+    "correlation_file_data": "File Data",
+    "correlation_select_column": "Select Column",
     "correlation_upload_file": "Upload File",
-    "correlation_file_format": "File could be csv, xlsx",
-    "correlation_chose_file": "Choose File",
     "correlation_no_file": "No file chosen",
     "correlation_result": "Result of Correlation(R-Value): ",
     "correlation_display": "Displaying File Data:",
