--- a/savis4/src/assets/i18n/es.json
+++ b/savis4/src/assets/i18n/es.json
@@ -277,9 +277,11 @@
     "correlation_format_of_input": "Formato de Entrada: 1, 2, 3, 4, ...",
     "correlation_both_inputs": "Ambas entradas deben tener la misma longitud",
     "correlation_calculate": "Calcular",
+    "correlation_update_chart": "Actualizar Gráfico",
+    "correlation_choose_file": "Elegir Archivo",
+    "correlation_file_data": "Datos del Archivo",
+    "correlation_select_column": "Seleccionar Columna",
     "correlation_upload_file": "Subir Archivo",
-    "correlation_file_format": "El archivo puede ser csv, xlsx",
-    "correlation_chose_file": "Elegir Archivo",
     "correlation_no_file": "Ningún archivo seleccionado",
     "correlation_result": "Resultado de la correlación(Valor-R): ",
     "correlation_display": "Mostrando Datos del Archivo:",
