#150 JIRA / Practice Problems Module Creation JIRA Description: Create and set up the homework problem webpages. This will involve creating all of the homework pages, including the directory page, and the individual module homework pages. For this commit, I: - Created a new "Problems" button on the navbar that redirects to problems main directory page - Modeled the main problems directory after the user manual page in terms of design - Added buttons that redirect to individual module problems pages on the problems directory page - Created a problems webpage for each individual feature/module (i.e. bar chart problems page) - Copied shell of back buttons from user manual over to problems pages - Created and validated Cypress tests for the problems pages

--- a/savis4/src/assets/i18n/en.json
+++ b/savis4/src/assets/i18n/en.json
@@ -293,6 +293,7 @@
     "nav_spanish": "Spanish",
     "nav_home": "Home",
     "nav_about": "About",
+    "nav_problems": "Problems",
     "nav_download": "Download",
     "nav_user_manual": "User Manual",
     "nav_sign_out": "Sign Out",
@@ -315,6 +316,21 @@
     "homepage_Graphs": "Graphs",
     "homepage_barChart": "Bar Chart",
     "homepage_dotPlot": "Dot Plot",
+    "//problems_component": "These are the translations for the Problems component",
+    "problems_title": "Practice Problems",
+    "problems_back": "Back to Practice Problems Selection",
+    "problems_bar_chart_title": "Bar Chart Problems",
+    "problems_correlation_title": "Correlation Problems",
+    "problems_dot_plot_title": "Dot Plot Problems",
+    "problems_omci_title": "One Mean Confidence Interval Problems",
+    "problems_omht_title": "One Mean Hypothesis Testing Problems",
+    "problems_opci_title": "One Proportion Confidence Interval Problems",
+    "problems_opht_title": "One Proportion Hypothesis Testing Problems",
+    "problems_regression_title": "Regression Problems",
+    "problems_tmci_title": "Two Mean Confidence Interval Problems",
+    "problems_tmht_title": "Two Mean Hypothesis Testing Problems",
+    "problems_tpci_title": "Two Proportion Confidence Interval Problems",
+    "problems_tpht_title": "Two Proportion Hypothesis Testing Problems",
     "//user_manual": "These are the translations for the User Manual component",
     "uman_title":"SAVIS User Manual Selection",
     "uman_back":"Back to User Manual Selection",
