#152 Export Capability - Two Prop CI
Added PDF and DOCX export buttons in third section below Total Number of Samples with workflow-based enabling.
Implemented dynamic imports for jspdf, jspdf-autotable, docx, and file-saver libraries with proper error handling.
Updated twoPorpCi.cy.ts with comprehensive export tests covering full workflow validation and button state management.

--- a/savis4/src/assets/i18n/en.json
+++ b/savis4/src/assets/i18n/en.json
@@ -103,8 +103,10 @@
     "opc_include_max": "Include Max?",
     "opc_prop_select": "Proportions selected: ",
     "opc_prop_noselect": "Proportions not selected: ",
-    "opc_export_pdf": "Export as PDF",
-    "opc_export_docx": "Export as DOCX",
+  "opc_export_pdf": "Export as PDF",
+  "opc_export_docx": "Export as DOCX",
+  "tpc_export_pdf": "Export as PDF",
+  "tpc_export_docx": "Export as DOCX",
     "//Two_means_hypothesis": "These are the translations for the Two means hypothesis component",
     "two_mean_title": "Two Means Significance Test",
     "tm_enter_data": "1. Enter Data",
