--- a/savis4/src/assets/i18n/es.json
+++ b/savis4/src/assets/i18n/es.json
@@ -133,8 +133,10 @@
     "opc_include_max": "Incluir máximo?",
     "opc_prop_select": "Proporciones seleccionadas: ",
     "opc_prop_noselect": "Proporciones no seleccionadas: ",
-    "opc_export_pdf": "Exportar como PDF",
-    "opc_export_docx": "Exportar como DOCX",
+  "opc_export_pdf": "Exportar como PDF",
+  "opc_export_docx": "Exportar como DOCX",
+  "tpc_export_pdf": "Exportar como PDF",
+  "tpc_export_docx": "Exportar como DOCX",
     "//Two_means_hypothesis": "These are the translations for the Two means hypothesis component",
     "two_mean_title": "Prueba de Hipótesis de Dos Medias",
     "tm_enter_data": "1. Ingresas Datos",
