--- a/savis4/src/assets/i18n/en.json
+++ b/savis4/src/assets/i18n/en.json
@@ -107,6 +107,8 @@
   "opc_export_docx": "Export as DOCX",
   "tpc_export_pdf": "Export as PDF",
   "tpc_export_docx": "Export as DOCX",
+  "omci_export_pdf": "Export as PDF",
+  "omci_export_docx": "Export as DOCX",
     "//Two_means_hypothesis": "These are the translations for the Two means hypothesis component",
     "two_mean_title": "Two Means Significance Test",
     "tm_enter_data": "1. Enter Data",
