#152 Export Capability - Two Mean CI
Added PDF and DOCX export buttons in section 3 below Upper Bound with workflow-based enabling.
Implemented dynamic imports for jspdf, jspdf-autotable, docx, and file-saver libraries with proper error handling.
Fixed DOCX compilation errors by adding type: 'png' to ImageRun constructors and updated button styling with border-radius for smooth edges.
Updated TwoMeanCI.cy.ts with simplified export tests after resolving workflow timing issues and button state management.

--- a/savis4/src/assets/i18n/en.json
+++ b/savis4/src/assets/i18n/en.json
@@ -109,6 +109,8 @@
   "tpc_export_docx": "Export as DOCX",
   "omci_export_pdf": "Export as PDF",
   "omci_export_docx": "Export as DOCX",
+  "tmci_export_pdf": "Export as PDF",
+  "tmci_export_docx": "Export as DOCX",
     "//Two_means_hypothesis": "These are the translations for the Two means hypothesis component",
     "two_mean_title": "Two Means Significance Test",
     "tm_enter_data": "1. Enter Data",
