#146 - Dark Mode User Manual

--- a/savis4/src/assets/i18n/en.json
+++ b/savis4/src/assets/i18n/en.json
@@ -43,7 +43,7 @@
     "mean_of_sample": "Mean of Sample Means",
     "original_dataset": "Original Dataset",
     "//one_proportion": "These are the translations for the One Proportion component",
-    "op_title": "One Proportion Hypothesis Test",
+    "op_title": "One Proportion Hypothesis Testing",
     "op_probability": "Probability of Heads p: ",
     "op_tosses": "Tosses: ",
     "op_reset": "Reset",
@@ -112,7 +112,7 @@
   "tmci_export_pdf": "Export as PDF",
   "tmci_export_docx": "Export as DOCX",
     "//Two_means_hypothesis": "These are the translations for the Two means hypothesis component",
-    "two_mean_title": "Two Means Significance Test",
+    "two_mean_title": "Two Means Hypothesis Testing",
     "tm_enter_data": "1. Enter Data",
     "tm_select_data": "Select Sample Data",
     "tm_sample1": "Sample 1",
@@ -301,7 +301,7 @@
     "nav_spanish": "Spanish",
     "nav_home": "Home",
     "nav_about": "About",
-    "nav_problems": "Problems",
+    "nav_problems": "Practice Problems",
     "nav_download": "Download",
     "nav_user_manual": "User Manual",
     "nav_sign_out": "Sign Out",
