--- a/savis4/src/assets/i18n/es.json
+++ b/savis4/src/assets/i18n/es.json
@@ -326,6 +326,7 @@
     "nav_spanish": "Español",
     "nav_home": "Inicio",
     "nav_about": "Acerca de SAVIS",
+    "nav_problems": "Problemas de Practica",
     "nav_download": "Descargar Archivo",
     "nav_user_manual": "Manual del Usuario",
     "nav_sign_out": "Cerrar Sesión",
