#170 Homework Feature - Correlation Visualization
Implemented interactive correlation analysis practice problem feature with dynamic scatter plots and feedback system.
Added random dataset generation with varying correlation strengths (strong positive/negative, moderate, weak, none).
Integrated user input forms for correlation type and strength selection with real-time validation and feedback.
Included regression line visualization (green for strong, red for weak/moderate) displayed after answer submission.
Updated correlation module title from 'Correlation Component' to 'Correlation Visualization' for consistency.

--- a/savis4/src/assets/i18n/en.json
+++ b/savis4/src/assets/i18n/en.json
@@ -294,7 +294,7 @@
     "correlation_file_input": "File Input",
     "correlation_select_two_columns": "Select any two columns from the following",
     "correlation_Displaying_File_Data:": "Displaying File Data",
-    "correlation_correlation_component": "Correlation Component",
+    "correlation_correlation_component": "Correlation Visualization",
     "correlation_input_file": "File Input",
     "//NavBar": "These are the translations for the NavBar component",
     "nav_english": "English",
@@ -329,6 +329,27 @@
     "problems_back": "Back to Practice Problems Selection",
     "problems_bar_chart_title": "Bar Chart Problems",
     "problems_correlation_title": "Correlation Problems",
+    "problems_correlation_instructions_title": "Analyze the Correlation",
+    "problems_correlation_instructions": "Look at the scatter plot and determine:<ul><li>The <strong>direction</strong> of the relationship (positive, negative, or none)</li><li>The <strong>strength</strong> of the correlation (very strong = |r| ≥ 0.9, strong = |r| ≥ 0.7, moderate = |r| ≥ 0.5, weak = |r| ≥ 0.3, very weak = |r| < 0.3)</li></ul>",
+    "problems_correlation_generate": "Generate New Dataset",
+    "problems_correlation_select": "Select",
+    "problems_correlation_type_label": "Correlation Type:",
+    "problems_correlation_type_positive": "Positive",
+    "problems_correlation_type_negative": "Negative",
+    "problems_correlation_type_none": "None/Very Weak",
+    "problems_correlation_strength_label": "Correlation Strength:",
+    "problems_correlation_strength_very_strong": "Very Strong (|r| ≥ 0.9)",
+    "problems_correlation_strength_strong": "Strong (|r| ≥ 0.7)",
+    "problems_correlation_strength_moderate": "Moderate (|r| ≥ 0.5)",
+    "problems_correlation_strength_weak": "Weak (|r| ≥ 0.3)",
+    "problems_correlation_strength_very_weak": "Very Weak (|r| < 0.3)",
+    "problems_correlation_submit": "Check Answer",
+    "problems_correlation_coefficient_label": "Correlation Coefficient:",
+    "problems_correlation_correct": "Correct!",
+    "problems_correlation_incorrect": "Incorrect. Try again!",
+    "problems_correlation_correct_answer": "Correct Answer",
+    "problems_correlation_try_again": "Try Another Dataset",
+    "problems_correlation_chart_helper": "Examine the pattern of points in the scatter plot above.",
     "problems_dot_plot_title": "Dot Plot Problems",
     "problems_omci_title": "One Mean Confidence Interval Problems",
     "problems_omht_title": "One Mean Hypothesis Testing Problems",
