#190 Match Button Layouts & #199 Correlation Visualization Improvements
#190: Updated Manual and Practice Problems pages to match Home Page button layout, sizing, and spacing.
#199: Added X and Y column selection dropdowns for CSV upload, implemented automatic population of manual input area when both columns are selected, and added clear X and Y labels above dropdowns for better user guidance.

--- a/savis4/src/assets/i18n/en.json
+++ b/savis4/src/assets/i18n/en.json
@@ -293,6 +293,7 @@
     "correlation_two_columns": "Select any two Columns from Available Column Names:",
     "correlation_file_input": "File Input",
     "correlation_select_two_columns": "Select any two columns from the following",
+    "correlation_auto_populate_hint": "Once both X and Y columns are selected, the data will automatically populate the manual input area above.",
     "correlation_Displaying_File_Data:": "Displaying File Data",
     "correlation_correlation_component": "Correlation Visualization",
     "correlation_input_file": "File Input",
